--- a/styles/style.scss
+++ b/styles/style.scss
@@ -74,7 +74,12 @@ html{
     border-bottom-left-radius: 50%;
     transform: translate(-50%,-50%);
 }
-
+.card-back-text{
+    top:50%;
+    z-index: 0;
+    color:hsl(345, 95%, 68%);
+    font-size:min(93px,13vw);
+}
 .card-text{
     text-align: center;
     position:absolute;
@@ -94,10 +99,11 @@ html{
 .card-top{
     background-color: hsl(237, 21%, 21%) ;
     position: absolute;
+    transform: rotateX(0deg);
+    transform-style: preserve-3d;
     top:0;
     width:100%;
     height:50%;
-    transform: perspective(1000px);
     transform-origin: bottom;
     overflow: hidden;
     &::before{
@@ -111,15 +117,14 @@ html{
     }
 }
 .animating-top{
-    animation: flipdown 0.5s forwards;
+    animation: flipdown 0.5s;
 }
 .animating-bottom{
-    transform:rotateX(90deg);
     animation: flipdown 0.5s reverse;
-    animation-delay: 0.3s;
 }
 .card-bottom{
     position: absolute;
+    background-color:hsl(236, 21%, 26%);
     top:50%;
     width:100%;
     height:50%;
@@ -132,6 +137,7 @@ html{
     justify-content: space-between;
     width:690px;
     padding-top:30px;
+    
     color: hsl(237, 18%, 59%)
 }
 .footer-text{
@@ -159,5 +165,5 @@ html{
 }
 @keyframes flipdown{
     from{ transform: rotateX(0); }
-    to{ transform: rotateX(90deg) }
+    to{ transform: rotateX(91deg) }
 }
